Improve compatibility with Java 17